@@ -7,9 +7,9 @@
 
 package org.elasticsearch.xpack.esql.expression.function.fulltext;
 
-import org.apache.lucene.util.BytesRef;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
+import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
 import org.elasticsearch.xpack.esql.core.querydsl.query.Query;
 import org.elasticsearch.xpack.esql.core.querydsl.query.QueryStringQuery;
@@ -18,6 +18,7 @@ import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.io.stream.PlanStreamInput;
 
 import java.io.IOException;
 import java.util.List;
@@ -48,11 +49,22 @@ public class QueryStringFunction extends FullTextFunction {
             description = "Query string in Lucene query string format."
         ) Expression queryString
     ) {
-        super(source, queryString);
+        super(source, queryString, List.of(queryString));
     }
 
     private QueryStringFunction(StreamInput in) throws IOException {
-        super(in);
+        this(Source.readFrom((PlanStreamInput) in), in.readNamedWriteable(Expression.class));
+    }
+
+    @Override
+    public void writeTo(StreamOutput out) throws IOException {
+        source().writeTo(out);
+        out.writeNamedWriteable(query());
+    }
+
+    @Override
+    public String getWriteableName() {
+        return ENTRY.name;
     }
 
     @Override
@@ -61,18 +73,13 @@ public class QueryStringFunction extends FullTextFunction {
     }
 
     @Override
-    public Query asQuery() {
-        Object queryAsObject = query().fold();
-        if (queryAsObject instanceof BytesRef queryAsBytesRef) {
-            return new QueryStringQuery(source(), queryAsBytesRef.utf8ToString(), Map.of(), null);
-        } else {
-            throw new IllegalArgumentException("Query in QSTR needs to be resolved to a string");
-        }
+    public Query asQuery(String queryText) {
+        return new QueryStringQuery(source(), queryText, Map.of(), null);
     }
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new QueryStringFunction(source(), newChildren.get(0));
+        return new QueryStringFunction(source(), newChildren.getFirst());
     }
 
     @Override
@@ -80,8 +87,4 @@ public class QueryStringFunction extends FullTextFunction {
         return NodeInfo.create(this, QueryStringFunction::new, query());
     }
 
-    @Override
-    public String getWriteableName() {
-        return ENTRY.name;
-    }
 }
